syntax = "proto3";

package crossplane;

import "crossplane/types.proto";
import "crossplane/yandex.proto";
import "protopgx/pgx.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/stroppy-cloud-panel/internal/proto/crossplane";

message Resource {
    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_CREATING = 1;
        STATUS_READY = 2;
        STATUS_DESTROYING = 3;
        STATUS_DESTROYED = 4;
        STATUS_DEGRADED = 5;
    }
    ExtRef ref = 1 [(sql.sql_field).serialized_message = true, (validate.rules).message.required = true];
    string resource_yaml = 3 [(validate.rules).string.min_len = 1];
    Status status = 4 [(validate.rules).enum.defined_only = true];
    bool synced = 5; // crossplane default statuses
    bool ready = 6; // crossplane default statuses
    string external_id = 7; // crossplane default statuses
    oneof resource_def {
        YandexCloud.ResourceDef yandex_cloud_resource_def = 100 [(validate.rules).message.required = true];
    }
}

message ResourceDag {
    message Node {
        string id = 1 [(validate.rules).string.min_len = 1];
        Resource resource = 2 [(validate.rules).message.required = true];
    }
    message Edge {
        string from = 1 [(validate.rules).string.min_len = 1];
        string to = 2 [(validate.rules).string.min_len = 1];
    }
    string id = 1 [(validate.rules).string.min_len = 1];
    repeated Node nodes = 2 [(validate.rules).repeated.min_items = 1];
    repeated Edge edges = 3 [(validate.rules).repeated.min_items = 1];
}